# audex

./: .config.example.yml  .config.system.linux.yml  .config.system.windows.yml  .coveragerc  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  .yamllint  Makefile  README.md  README.zh-CN.md  VERSION  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: auto-tag.yml  build-deb-only.yml  build-deb.yml  docs.yml  publish.yml  rebuild-deb.yml  release.yml  test.yml
audex/: __init__.py  __main__.py  container.py  exceptions.py  lifespan.py  session.py  types.py  utils.py
audex/applications/: __init__.py  api.py  container.py
audex/applications/assets/scripts/: main.js
audex/applications/assets/styles/: main.css
audex/applications/templates/: index.html
audex/cli/: __init__.py  args.py  exceptions.py
audex/cli/apis/: __init__.py  run.py  serve.py
audex/cli/apis/init/: __init__.py  gencfg.py  setup.py  vprgroup.py
audex/cli/helper/: ansi.py  display.py
audex/config/: __init__.py
audex/config/core/: __init__.py  app.py  audio.py  logging.py  server.py  session.py  ui.py
audex/config/gui/: __init__.py
audex/config/helper/: audio.py  store.py
audex/config/helper/client/: http.py  websocket.py
audex/config/helper/provider/: dashscope.py  unisound.py  xfyun.py
audex/config/infrastructure/: __init__.py  cache.py  database.py  recorder.py  store.py
audex/config/provider/: __init__.py  transcription.py  vpr.py
audex/entity/: __init__.py  doctor.py  doctor.pyi  fields.py  segment.py  segment.pyi  session.py  session.pyi  utterance.py  utterance.pyi  voiceprint_registration.py  vp.py  vp.pyi
audex/filters/: __init__.py
audex/helper/: display.py  hash.py  mixin.py  net.py  session.py  settings.py
audex/helper/settings/: __init__.py  fields.py
audex/injectors/: config.py  infrastructure.py  lifespan.py  repos.py  service.py
audex/lib/: audio.py  exporter.py  recorder.py  restful.py  session.py  types.py  usb.py  wifi.py
audex/lib/cache/: __init__.py  inmemory.py
audex/lib/database/: __init__.py  sqlite.py
audex/lib/filesys/: __init__.py  exceptions.py
audex/lib/http/: __init__.py
audex/lib/injectors/: cache.py  container.py  database.py  exporter.py  filesys.py  recorder.py  server.py  session.py  sqlite.py  store.py  transcription.py  usb.py  vpr.py  wifi.py
audex/lib/logger/: __init__.py  loguru.py  native.py  schema.py  types.py
audex/lib/repos/: __init__.py  decorators.py  doctor.py  segment.py  session.py  utterance.py  voiceprint_registration.py  vp.py
audex/lib/repos/database/: sqlite.py
audex/lib/repos/tables/: __init__.py  doctor.py  segment.py  session.py  utterance.py  voiceprint_registration.py  vp.py
audex/lib/server/: __init__.py  auth.py  handlers.py  types.py
audex/lib/server/templates/: index.html.j2  login.html.j2
audex/lib/store/: __init__.py  localfile.py
audex/lib/transcription/: __init__.py  dashscope.py  events.py  types.py
audex/lib/transript/: __init__.py  dashscope.py
audex/lib/vpr/: __init__.py
audex/lib/vpr/unisound/: __init__.py  types.py
audex/lib/vpr/xfyun/: __init__.py  types.py
audex/lib/websocket/: __init__.py  connection.py  pool.py
audex/service/: __init__.py  decorators.py  doctor.py  export.py  session.py
audex/service/doctor/: __init__.py  const.py  exceptions.py  types.py
audex/service/export/: __init__.py  const.py  exceptions.py  types.py
audex/service/injectors/: container.py  doctor.py  export.py  session.py
audex/service/session/: __init__.py  const.py  exceptions.py  types.py
audex/valueobj/: __init__.py  session.py  utterance.py
audex/valueobj/common/: auth.py  email.py  ops.py  phone.py  version.py
audex/view/: __init__.py  container.py  decorators.py
audex/view/components/: __init__.py  overlay_input.py
audex/view/pages/: dashboard.py  login.py  recording.py  register.py  sessions.py  settings.py
audex/view/pages/dashboard/: __init__.py  filesys.py  wifi.py
audex/view/pages/sessions/: __init__.py  details.py  export.py
audex/view/pages/voiceprint/: __init__.py  enroll.py  update.py
docs/: development.md  index.md  installation.md  service_implementation_summary.md  service_usage.md
docs/reference/: index.md
docs/reference/lib/: exporter.md  index.md  recorder.md  restful.md  session.md  usb.md
packaging/linux/: Dockerfile-build  Dockerfile-test  build.py  build.sh  guide.sh  test.sh
scripts/: build.sh  bump.ps1  bump.sh  deploy.sh  dev.sh  genfilters.py  genstubs.py
scripts/tools/: common.ps1  common.py
tests/: test_version.py
(+57 files in other folders)
