[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2,<3" ]

[project]
name = "audex"
version = "1.0.0"
description = ""
readme = "README.md"
authors = [
  { name = "BoChenSHEN", email = "6goddddddd@gmail.com" },
]
requires-python = ">=3.10,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aiofiles>=25.1,<26",
  "argon2-cffi>=25.1,<26",
  "cachetools>=6.2.2,<7",
  "halo>=0.0.31,<0.0.32",
  "httpx>=0.28.1,<0.29",
  "loguru>=0.7.3,<0.8",
  "numpy>=1.26.4,<2",
  "pyaudio>=0.2.14,<0.3",
  "pydantic>=2.12.4,<3",
  "pydantic-settings>=2.12,<3",
  "pyqt6>=6.10,<7",
  "sqlalchemy>=2.0.44,<3",
  "sqlmodel>=0.0.27,<0.0.28",
  "tenacity>=9.1.2,<10",
  "websockets>=15.0.1,<16",
]

optional-dependencies.dev = [ "nuitka>=2.8.6,<3", "pre-commit>=4.4,<5", "ruff>=0.14.5,<0.15" ]
optional-dependencies.test = [ "mypy>=1.18.2,<2", "pylint>=4.0.3,<5", "pytest>=9.0.1,<10", "pytest-cov>=7,<8" ]
