[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2,<3" ]

[project]
name = "audex"
version = "1.0.6"
description = ""
readme = "README.md"
authors = [
  { name = "BoChenSHEN", email = "6goddddddd@gmail.com" },
]
requires-python = ">=3.10,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aiofiles>=25.1,<26",
  "aiosqlite>=0.21,<0.22",
  "argon2-cffi>=25.1,<26",
  "cachetools>=6.2.2,<7",
  "dependency-injector>=4.48.2,<5",
  "dotenv>=0.9.9,<0.10",
  "halo>=0.0.31,<0.0.32",
  "httpx>=0.28.1,<0.29",
  "jinja2>=3.1.6,<4",
  "loguru>=0.7.3,<0.8",
  "nicegui>=3.3.1,<4",
  "numpy>=1.26.4,<2",
  "pyaudio>=0.2.14,<0.3",
  "pydantic>=2.12.4,<3",
  "pydantic-settings>=2.12,<3",
  "pydub>=0.25.1,<0.26",
  "pyqt6>=6.10,<7; sys_platform!='linux'",           # Linux users should install PyQt6 from their distro packages
  "pyqt6-webengine>=6.10,<7; sys_platform!='linux'",
  "pyudev>=0.24.4,<0.25; sys_platform=='linux'",
  "pywebview>=6.1,<7",
  "pywin32>=311,<312; sys_platform=='win32'",
  "qtpy>=2.4.3,<3",
  "sqlalchemy>=2.0.44,<3",
  "sqlmodel>=0.0.27,<0.0.28",
  "starlette>=0.50,<0.51",
  "tenacity>=9.1.2,<10",
  "uvicorn[standard]>=0.38,<0.39",
  "websockets>=15.0.1,<16",
  "wmi>=1.5.1,<2; sys_platform=='win32'",
]

optional-dependencies.dev = [ "pre-commit>=4.4,<5", "ruff>=0.14.5,<0.15" ]
optional-dependencies.docs = [
  "mkdocs>=1.6.1,<2",
  "mkdocs-material>=9.7,<10",
  "mkdocs-minify-plugin>=0.8,<0.9",
  "mkdocstrings[python]>=0.30.1,<0.31",
  "pymdown-extensions>=10.17.1,<11",
]
optional-dependencies.test = [
  "mypy>=1.18.2,<2",
  "pylint>=4.0.3,<5",
  "pytest>=9.0.1,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=7,<8",
  "types-aiofiles>=25.1.0.20251011,<26",
  "types-cachetools>=6.2.0.20251022,<7",
  "types-pyyaml>=6.0.12.20250915,<7",
]

[tool.poetry]
packages = [ { include = "audex" } ]
include = [
  "audex/view/static/**/*.js",
  "audex/view/static/**/*.css",
  "audex/view/static/images/**/*",
  "audex/lib/server/templates/**/*.j2",
  "audex/lib/server/templates/**/*.html",
  "audex/lib/server/templates/**/*.js",
  "audex/lib/server/templates/**/*.css",
]

[tool.poetry.scripts]
audex = "audex.cli:cli"
